--- a/activities.html
+++ b/activities.html
@@ -93,7 +93,7 @@
 
     <!-- Header -->
     <section class="py-16 text-center">
-        <h1 class="text-4xl font-bold mb-2">Activities & Certificates</h1>
+        <h1 class="text-4xl font-bold mb-2 bg-gray-50">Activities & Certificates</h1>
         <p class="text-gray-600">กิจกรรม ค่าย อบรม และใบประกาศที่เกี่ยวข้องกับสายเทคโนโลยี</p>
     </section>
 
