--- a/project-locker.html
+++ b/project-locker.html
@@ -121,9 +121,9 @@
       <section class="space-y-4">
         <h2 class="text-2xl font-semibold">ตัวอย่างโปรเจกต์</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-          <img src="/Img/ล็อกเอร์.png" alt="Locker Screenshot 1" class="rounded shadow-md object-cover w-full h-74">
-          <img src="img/เช่า.png" alt="Locker Screenshot 2" class="rounded shadow-md object-cover w-full h-69">
-          <img src="/Img/สถานะ.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
+          <img src="./Img/ล็อกเอร์.png" alt="Locker Screenshot 1" class="rounded shadow-md object-cover w-full h-74">
+          <img src="./img/เช่า.png" alt="Locker Screenshot 2" class="rounded shadow-md object-cover w-full h-69">
+          <img src="./Img/สถานะ.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
         </div>
       </section>
 
