--- a/project-react.html
+++ b/project-react.html
@@ -119,10 +119,10 @@
       <section class="space-y-4">
         <h2 class="text-2xl font-semibold">ตัวอย่างโปรเจกต์</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-          <img src="/Img/เน็ตฮีโร่.png" alt="Locker Screenshot 1" class="rounded shadow-md object-cover w-full h-74">
-          <img src="img/เน็ตลิด.png" alt="Locker Screenshot 2" class="rounded shadow-md object-cover w-full h-69">
-          <img src="/Img/เน็ตท็อปเท็น.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
-          <img src="/Img/รีแอคid.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
+          <img src="./Img/เน็ตฮีโร่.png" alt="Locker Screenshot 1" class="rounded shadow-md object-cover w-full h-74">
+          <img src="./img/เน็ตลิด.png" alt="Locker Screenshot 2" class="rounded shadow-md object-cover w-full h-69">
+          <img src="./Img/เน็ตท็อปเท็น.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
+          <img src="./Img/รีแอคid.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
         </div>
       </section>
 
