--- a/project-shop.html
+++ b/project-shop.html
@@ -118,22 +118,22 @@
       <section class="space-y-4">
         <h2 class="text-2xl font-semibold">ตัวอย่างโปรเจกต์</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-          <img src="/Img/ฟิกอินเด็ก.png" alt="Locker Screenshot 1" class="rounded shadow-md object-cover w-full h-74">
-          <img src="img/ฟิกล็อกอิน.png" alt="Locker Screenshot 2" class="rounded shadow-md object-cover w-full h-74">
-          <img src="/Img/ฟิกสินค้า.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
+          <img src="./Img/ฟิกอินเด็ก.png" alt="Locker Screenshot 1" class="rounded shadow-md object-cover w-full h-74">
+          <img src="./img/ฟิกล็อกอิน.png" alt="Locker Screenshot 2" class="rounded shadow-md object-cover w-full h-74">
+          <img src="./Img/ฟิกสินค้า.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
           <div class="flex flex-col justify-between">
-            <img src="img/ฟิกชำระเต็ม.png" alt="Locker Screenshot 2" class="rounded shadow-md object-cover w-full h-74">
-            <img src="img/ฟิกมัดจำ.png" alt="Locker Screenshot 2" class="rounded shadow-md object-cover w-full h-74">
+            <img src="./img/ฟิกชำระเต็ม.png" alt="Locker Screenshot 2" class="rounded shadow-md object-cover w-full h-74">
+            <img src="./img/ฟิกมัดจำ.png" alt="Locker Screenshot 2" class="rounded shadow-md object-cover w-full h-74">
           </div>
-          <img src="/Img/ฟิกหน้าชำระเต็มสินค้า.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
+          <img src="./Img/ฟิกหน้าชำระเต็มสินค้า.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
           <div class="flex flex-col justify-between">
-            <img src="/Img/ฟิกกำลังจ้ชัดส่ง.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
-            <img src="/Img/ฟิกจัดส่งสินค้าสำเร็จ.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
+            <img src="./Img/ฟิกกำลังจ้ชัดส่ง.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
+            <img src="./Img/ฟิกจัดส่งสินค้าสำเร็จ.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
           </div>
           <div class="flex flex-col justify-center">
-             <img src="/Img/ฟิกมันจำชำระเพื่ม.png" alt="Locker Screenshot 1" class="rounded shadow-md object-cover w-full h-74">
+             <img src="./Img/ฟิกมันจำชำระเพื่ม.png" alt="Locker Screenshot 1" class="rounded shadow-md object-cover w-full h-74">
           </div>
-          <img src="/Img/ฟิกหน้าชำระคงเหลือมัดจำ.png" alt="Locker Screenshot 1" class="rounded shadow-md object-cover w-full h-74">
+          <img src="./Img/ฟิกหน้าชำระคงเหลือมัดจำ.png" alt="Locker Screenshot 1" class="rounded shadow-md object-cover w-full h-74">
         </div>
       </section>
 
