--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
             <li><a href="activities.html" class="hover:text-gray-300">Activities</a></li>
            
           </ul>
-
           <!-- Hamburger -->
           <button id="menuBtn" class="md:hidden text-white text-2xl">☰</button>
         </div>
@@ -112,7 +111,7 @@
   <!-- --------------------------- HERO SECTION --------------------------- -->
   <section class=" h-full grid xl:grid-cols-[1fr_2fr] text-center py-14 text-white bg-gray-900">
     <search class="">
-      <img src="img/เร.jpg"
+      <img src="./img/เร.jpg"
          alt="profile"
          class="rounded-full mx-auto mb-6 object-cover object-[50%_20%] shadow-lg w-[480px] h-[480px]"/>
     </search>
@@ -127,7 +126,7 @@
             พื้นฐานฮาร์ดแวร์ช่วยให้เข้าใจระบบเซนเซอร์และต่อยอดสู่งานเว็บได้อย่างมีประสิทธิภาพ
           </p>
           <div>
-            <a href="projects.html"
+            <a href="activities.html"
             class="inline-block mt-6 px-4 py-2 bg-gray-900 text-white rounded-lg hover:bg-gray-700 transition border border-gray-50 ">
             ดูผลงาน
           </a>
