--- a/project-wokwi.html
+++ b/project-wokwi.html
@@ -120,10 +120,10 @@
       <section class="space-y-4">
         <h2 class="text-2xl font-semibold">ตัวอย่างโปรเจกต์</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-          <img src="/Img/wokwiรวม.png" alt="Locker Screenshot 1" class="rounded shadow-md object-cover w-full h-74">
-          <img src="img/wokiเริ่มต้น.png" alt="Locker Screenshot 2" class="rounded shadow-md object-cover w-full h-69">
-          <img src="/Img/wokwiกลาง.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
-          <img src="/Img/wokidกลาง2.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
+          <img src="./Img/wokwiรวม.png" alt="Locker Screenshot 1" class="rounded shadow-md object-cover w-full h-74">
+          <img src="./img/wokiเริ่มต้น.png" alt="Locker Screenshot 2" class="rounded shadow-md object-cover w-full h-69">
+          <img src="./Img/wokwiกลาง.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
+          <img src="./Img/wokidกลาง2.png" alt="Locker Screenshot 3" class="rounded shadow-md object-cover w-full h-74">
         </div>
       </section>
 
