--- a/skills.html
+++ b/skills.html
@@ -121,7 +121,7 @@
       <!-- Front-End -->
       <div class="mb-12">
         <h2 class="text-4xl font-semibold mb-6 flex items-center gap-4">
-          <span><img src="./Img/font.webp" class="w-10" alt=""></span>
+          <span><img src="/Img/font.webp" class="w-10" alt=""></span>
           Front-End
         </h2>
 
@@ -237,7 +237,7 @@
       <!-- Back-End -->
       <div class="mb-12">
         <h2 class="text-2xl font-semibold mb-6 flex items-center gap-4">
-          <span><img src="./Img/t.webp" class="w-10" alt=""></span>
+          <span><img src="/Img/t.webp" class="w-10" alt=""></span>
           Back-End
         </h2>
 
