rename folder img -> Img

--- a/activities.html
+++ b/activities.html
@@ -93,7 +93,7 @@
 
     <!-- Header -->
     <section class="py-16 text-center">
-        <h1 class="text-4xl font-bold mb-2 bg-gray-50">Activities & Certificates</h1>
+        <h1 class="text-4xl font-bold mb-2 text-gray-50">Activities & Certificates</h1>
         <p class="text-gray-600">กิจกรรม ค่าย อบรม และใบประกาศที่เกี่ยวข้องกับสายเทคโนโลยี</p>
     </section>
 
@@ -103,7 +103,7 @@
         <!-- Activity Card -->
         <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
         <div class="flex items-center gap-4">
-            <img src="img/กิติกรรมประกาศ.png" class="w-16 h-16 object-cover rounded-lg shadow" alt="certificate">
+            <img src="./Img/กิติกรรมประกาศ.png" class="w-16 h-16 object-cover rounded-lg shadow" alt="certificate">
             <div>
             <h2 class="text-xl font-semibold">อบรม Kmitl</h2>
             <p class="text-sm text-gray-500">Digital Citizenship</p>
@@ -117,7 +117,7 @@
         <!-- Activity Card -->
         <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
         <div class="flex items-center gap-4">
-            <img src="img/กิติกรรมประกาส.png" class="w-16 h-16 object-cover rounded-lg shadow" alt="hackathon">
+            <img src="./Img/กิติกรรมประกาส.png" class="w-16 h-16 object-cover rounded-lg shadow" alt="hackathon">
             <div>
             <h2 class="text-xl font-semibold">อบรม Kmitl</h2>
             <p class="text-sm text-gray-500">Digital Media Literacy</p>
@@ -131,7 +131,7 @@
         <!-- Activity Card -->
         <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
         <div class="flex items-center gap-4">
-            <img src="img/รางวัล.JPG" class="w-16 h-16 object-cover rounded-lg shadow" alt="coding camp">
+            <img src="./Img/รางวัล.JPG" class="w-16 h-16 object-cover rounded-lg shadow" alt="coding camp">
             <div>
             <h2 class="text-xl font-semibold">รางวัลชนะเลิดอันดับที่ 1</h2>
             <p class="text-sm text-gray-500">Chetupon Invention Project Fair 2025</p>
@@ -145,7 +145,7 @@
         <!-- Activity Card -->
         <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
         <div class="flex items-center gap-4">
-            <img src="img/ประกวดชุด.JPG" class="w-16 h-16 object-cover rounded-lg shadow" alt="robotics">
+            <img src="./Img/ประกวดชุด.JPG" class="w-16 h-16 object-cover rounded-lg shadow" alt="robotics">
             <div>
             <h2 class="text-xl font-semibold">ประกวดชุดรีไซรีไซเคิล</h2>
             <p class="text-sm text-gray-500">รางวัลชนะเลิดอันดับที่ 1</p>
