--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <!-- --------------------------- HERO SECTION --------------------------- -->
   <section class=" h-full grid xl:grid-cols-[1fr_2fr] text-center py-14 text-white bg-gray-900">
     <search class="">
-      <img src="./img/เร.jpg"
+      <img src="./Img/เร.jpg"
          alt="profile"
          class="rounded-full mx-auto mb-6 object-cover object-[50%_20%] shadow-lg w-[480px] h-[480px]"/>
     </search>
