--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
     <div class="flex flex-col md:flex-row items-center gap-8">
       <!-- รูป -->
       <div class="flex-shrink-0">
-        <img src="./img/เร.jpg" alt="Profile" class="rounded-full w-64 h-64 object-cover object-[50%_20%] shadow-lg mx-auto">
+        <img src="./Img/เร.jpg" alt="Profile" class="rounded-full w-64 h-64 object-cover object-[50%_20%] shadow-lg mx-auto">
       </div>
       <!-- ข้อมูลส่วนตัว -->
       <div class="flex-1 text-white">
