rename png -> PNG

--- a/activities.html
+++ b/activities.html
@@ -103,7 +103,7 @@
         <!-- Activity Card -->
         <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
         <div class="flex items-center gap-4">
-            <img src="./Img/กิติกรรมประกาศ.png" class="w-16 h-16 object-cover rounded-lg shadow" alt="certificate">
+            <img src="./Img/กิติกรรมประกาศ.PNG" class="w-16 h-16 object-cover rounded-lg shadow" alt="certificate">
             <div>
             <h2 class="text-xl font-semibold">อบรม Kmitl</h2>
             <p class="text-sm text-gray-500">Digital Citizenship</p>
@@ -117,7 +117,7 @@
         <!-- Activity Card -->
         <div class="bg-white p-6 rounded-xl shadow hover:shadow-lg transition">
         <div class="flex items-center gap-4">
-            <img src="./Img/กิติกรรมประกาส.png" class="w-16 h-16 object-cover rounded-lg shadow" alt="hackathon">
+            <img src="./Img/กิติกรรมประกาส.PNG" class="w-16 h-16 object-cover rounded-lg shadow" alt="hackathon">
             <div>
             <h2 class="text-xl font-semibold">อบรม Kmitl</h2>
             <p class="text-sm text-gray-500">Digital Media Literacy</p>
